--- a/src/xpr/lab_4.sim/sim_1/behav/xsim/xsim.dir/testbench_behav/webtalk/usage_statistics_ext_xsim.html
+++ b/src/xpr/lab_4.sim/sim_1/behav/xsim/xsim.dir/testbench_behav/webtalk/usage_statistics_ext_xsim.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2708876</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Tue Oct 27 16:55:44 2020</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Wed Oct 28 20:25:33 2020</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>XSIM v2019.2 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>3bb9b409a0d644e9b607ef9d05d023cc</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>78</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>81</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>21d59430-3e1b-498f-a3ca-baf86dccc87b</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>21d59430-3e1b-498f-a3ca-baf86dccc87b</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>FALSE</TD>
@@ -35,17 +35,27 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>command_line_options</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>command=xsim</TD>
+<TR ALIGN='LEFT'>    <TD>command=xelab</TD>
+    <TD>debug=typical</TD>
+    <TD>dpi_used=false</TD>
+    <TD>file_counter=26</TD>
+</TR><TR ALIGN='LEFT'>    <TD>gendll=false</TD>
+    <TD>hwcosim=false</TD>
+    <TD>sdfmodeling=false</TD>
+    <TD>vhdl2008=false</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>iteration=1</TD>
-    <TD>runtime=650 ns</TD>
-    <TD>simulation_memory=7456_KB</TD>
-    <TD>simulation_time=0.17_sec</TD>
-</TR><TR ALIGN='LEFT'>    <TD>trace_waveform=true</TD>
+<TR ALIGN='LEFT'>    <TD>compiler_memory=90200_KB</TD>
+    <TD>compiler_time=1.75_sec</TD>
+    <TD>simulation_image_code=314 KB</TD>
+    <TD>simulation_image_data=33 KB</TD>
+</TR><TR ALIGN='LEFT'>    <TD>total_instances=65</TD>
+    <TD>total_nets=0</TD>
+    <TD>total_processes=524</TD>
+    <TD>xilinx_hdl_libraries_used=secureip unimacro_ver unisims_ver </TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
